# audx

./: .gitignore  HELP.md  README.md  build.ps1  pyproject.toml
.github/workflows/: release.yml
audx/: __main__.py  cli.py  command.py  ffmpeg.py  jobs.py  presets.py  progress.py  runner.py
docs/superpowers/specs/: 2026-06-15-audx-audio-converter-design.md
tests/: test_cli.py  test_command.py  test_ffmpeg.py  test_integration.py  test_jobs.py  test_presets.py  test_progress.py  test_runner.py
