[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "audx"
version = "0.2.0"
description = "Audio converter CLI built on ffmpeg"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
audx = "audx.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pyinstaller"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
